bug fix light and dark mode

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,7 +127,7 @@ footer {
   margin: auto;
 }
 .info-box {
-  height: 480px !important;
+  min-height: 480px !important;
 }
 .card {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 50px -12px;
